--- a/build.gradle
+++ b/build.gradle
@@ -18,4 +18,4 @@ dependencies {
     implementation 'org.apache.spark:spark-mllib_2.12:3.5.1'
 }
 
-mainClassName = 'G48HW2'
+//mainClassName = 'G48HW2'
